--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "m1n64/laravel9-react",
     "type": "project",
-    "version": "1.1.0",
-    "description": "The Laravel + React 18 template.",
+    "version": "2.0.0",
+    "description": "The Laravel with React 18 template.",
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
